--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('background.png') no-repeat center center fixed;
+            background: url('https://images.steamusercontent.com/ugc/15448631090551048754/CD0E9A0B69A0F9D9115865F76A21C2BDEE19D738/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false') no-repeat center center fixed;
             background-size: cover;
             color: #eee;
             font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
 </head>
 <body>
     <div class="content-block">
-        <img src="icongroup.png" alt="Аватар" class="rounded-img" />
+        <img src="https://images.steamusercontent.com/ugc/17058036215497236018/D23A9BC5B9E05C193EAF7B17927CAB7D5012DA76/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Аватар" class="rounded-img" />
         <div class="text-block">
             <h1>Просто команда, сделанная по фану (CS2)</h1>
             <p>Клан тег: MeshXTeam</p>
@@ -96,4 +96,5 @@
         </div>
     </div>
 </body>
+
 </html>
